# dazed

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: linting.yml  release.yml  tests.yml
docs/: api_reference.rst  conf.py  index.rst  reference.rst
src/dazed/: __init__.py  confusion_matrix.py
tests/: __init__.py  test_confusion_matrix.py  test_dazed.py
