[tool.poetry]
name = "dazed"
version = "0.1.0"
description = "A tiny confusion matrix package."
authors = ["calmdown13 <callum@callumdownie.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.5"
pandas = {version = "^1.2.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
scikit-learn = "^0.24.0"
black = "^20.8b1"
pytest-cov = "^2.10.1"

[tool.poetry.extras]
pandas = ["pandas"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
