[tool.poetry]
name = "dazed"
version = "1.0.0"
description = "A confusion matrix package."
authors = ["calmdown13 <callum@callumdownie.com>"]
documentation = "https://dazed.readthedocs.io"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.19.5"
pandas = {version = "^1.1.5", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
scikit-learn = "^0.24.0"
black = "^20.8b1"
pytest-cov = "^2.10.1"
coverage = {extras = ["toml"], version = "^5.3.1"}
pytype = {version = "^2021.1.8", python = ">=3.6,<3.9"}
flake8-docstrings = "^1.5.0"
darglint = "^1.5.8"
sphinx = "^3.4.3"
sphinx-autodoc-typehints = "^1.11.1"
xdoctest = "^0.15.0"

[tool.poetry.extras]
pandas = ["pandas"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dazed"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
